--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "better-auth": "^1.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "lucide-react": "^0.553.0",
-    "mongodb": "^7.0.0",
-    "mongoose": "^9.0.1",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
     "next": "^16.0.7",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-select-country-list": "^2.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
